fix navbar overlapp footer and add template for page

--- a/src/components/AuthFormWrapper/FormLogo/FormLogo.module.sass
+++ b/src/components/AuthFormWrapper/FormLogo/FormLogo.module.sass
@@ -16,6 +16,8 @@
     font-size: 3.5rem
     font-weight: 300
     color: white
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3)
+	
     
 
 @media screen and (max-width: 800px) 
